--- a/chat-gpt/index.html
+++ b/chat-gpt/index.html
@@ -11,10 +11,10 @@
 
 <body>
     <div id="messages"></div>
-    <form id="form" onkeydown="return event.key != 'Enter';" action="">
+    <form id="form" action="">
         <textarea id="input" autocomplete="off"></textarea>
-        <button onclick="sendmessge()" type="button">send</button>
     </form>
+    <button onclick="sendmessge()" type="button">send</button>
     <script src="js/style.js"></script>
 </body>
 
