--- a/chat-gpt/index.html
+++ b/chat-gpt/index.html
@@ -1,21 +1,51 @@
 <!DOCTYPE html>
+
 <html>
 
+
+
 <head>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>chat-GPT</title>
+
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 
+
 <body>
+
+    <div id="text">
+
+        <span>chat-GPT</span>
+
+        <link id="userme">MR.salari</span>
+
+        <a href="api-salari.00.pe" id="userme">ارتباط با سازنده</a>
+
+    </div>
+
     <div id="messages"></div>
+
     <form id="form" action="">
-        <textarea id="input" autocomplete="off"></textarea>
+
+        <textarea id="input" autocomplete="off" cols="30" rows="10"></textarea>
+
         <button onclick="sendmessge()" type="button">send</button>
+
     </form>
+
     <script src="js/style.js"></script>
+
 </body>
 
-</html>
+
+
+    </html>
