--- a/chat-gpt/index.html
+++ b/chat-gpt/index.html
@@ -26,7 +26,7 @@
 
         <span>chat-GPT</span>
 
-        <a href="http://api-salari.000.pe/?i=1" id="userme">ارتباط با سازنده</a>
+        <a href="api-salari.github.io/info" id="userme">ارتباط با سازنده</a>
 
     </div>
 
