--- a/setayesh/index.html
+++ b/setayesh/index.html
@@ -12,7 +12,7 @@
 
 <script>
     function Redirect() {
-               window.location = "https://http://api-salari.github.io/setayesh/message_all";
+               window.location = "https://api-salari.github.io/setayesh/message_all";
             }
     function send() {
         text = document.getElementById('input').value;
