--- a/setayesh/index.html
+++ b/setayesh/index.html
@@ -46,7 +46,7 @@
         </form>
     </div>
     <div id="text"></div>
-    <footer id="linkme">ساخته شده توسط <a href="../index.html">اقای سالاری</a></footer>
+    <footer id="linkme">ساخته شده توسط <a id="a" href="../index.html">اقای سالاری</a></footer>
 </div>
 </body>
 
