--- a/setayesh/index.html
+++ b/setayesh/index.html
@@ -42,7 +42,7 @@
             <textarea placeholder="پیام خود را وارد کنید" id="input" autocomplete="off"
                 onkeydown="return event.key != 'Enter';" type="number"></textarea>
             <input id="button" onclick="send()" type="button" value="ارسال">
-            <a href="./message_all/index.html" id="button1">نمایش پیام</a>
+            <div><a href="./message_all/index.html" id="button1">نمایش پیام</a></div>
         </form>
     </div>
     <div id="text"></div>
