--- a/chat/gpt/index.html
+++ b/chat/gpt/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
-    <script src="./js/jQuery.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>chat-GPT</title>
@@ -13,7 +12,7 @@
 <body>
     <div id="text">
         <span>chat-GPT</span>
-        <a href="api-salari.00.pe" id="userme">ارتباط با سازنده</a>
+        <a href="https://api-salari.github.io" id="userme">ارتباط با سازنده</a>
     </div>
     <div id="messages">
         <div id="img"></div>
