--- a/chat/hacker/index.html
+++ b/chat/hacker/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="text">
         <span>chat-hacker</span>
-        <a href="https://mr-salari.github.io/info" id="userme">ارتباط با سازنده</a>
+        <a href="https://api-salari.github.io" id="userme">ارتباط با سازنده</a>
     </div>
     <div id="messages"></div>
     <form id="form" action="">
