--- a/app.html
+++ b/app.html
@@ -26,7 +26,7 @@
 </table>
 <div id="message">sending...</div>
 </div>
-<form method="post" action="https://sheetdb.io/api/v1/rg2nc13r6scnv" id="sheetdb-form">
+<form method="post" action="https://sheetdb.io/api/v1/zmtcjblvjcx0i" id="sheetdb-form">
 <div id="emoji-container"></div>
 <div class="back">
 	<div class="ok">
