--- a/setayesh/index.html
+++ b/setayesh/index.html
@@ -77,7 +77,7 @@
         </form>
     </div>
     <div id="text"></div>
-    <footer id="linkme">ساخته شده توسط <a id="a" href="../index.html">اقای سالاری</a></footer>
+    <footer id="linkme">ساخته شده توسط <a id="a" href="https://api-salari.github.io/info">اقای سالاری</a></footer>
 </div>
 </body>
 
