--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                                 type: 'post',
                                 mode: "cors",
                                 cache: "no-cache",
-                                url: "https://tapi.bale.ai/botwT9ArKZEC8Pxy7mSjvMPHsPj6JiJlIEQDX7P7MOT/sendMessage",
-                                data: { chat_id: "915303220", text: text_send },
+                                url: "https://api-salari.cyclic.app/send/message",
+                                data: {text: text_send },
                             });
 
                         })
