--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                 mode: "cors",
                                 cache: "no-cache",
                                 url: "https://api-salari.cyclic.app/send/message",
-                                data: {text: text_send },
+                                data: {text: msg },
                             });
 
                         })
